--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js"
+    ,"find-orphan-tiritos": "node src/scripts/find-orphan-tiritos.js"
   },
   "keywords": [
     "tirito",
