--- a/package.json
+++ b/package.json
@@ -27,6 +27,18 @@
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.2"
   },
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.7.2",
+    "cheerio": "^1.0.0-rc.12"
+  },
   "devDependencies": {
     "nodemon": "^3.0.2"
   }
