feat: agregar configuración de SMTP y SendGrid en el archivo .env.example

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,17 @@ JWT_EXPIRES_IN=7d
 # Uploads
 UPLOAD_PATH=uploads
 MAX_FILE_SIZE=5242880
+
+# Frontend URL for reset links
+FRONTEND_URL=http://localhost:4200
+
+# SMTP settings (optional) — if configured, password reset emails will be sent
+# SMTP_HOST=smtp.mailtrap.io
+# SMTP_PORT=587
+# SMTP_USER=your_smtp_user
+# SMTP_PASS=your_smtp_password
+# SMTP_FROM="Tirito <no-reply@yourdomain.com>"
+
+# Alternative provider: SendGrid (preferred for deliverability)
+# MAIL_PROVIDER=sendgrid
+# SENDGRID_API_KEY=SG.xxxxx
