feat: agregar script para enviar correos de prueba utilizando la API de Mailtrap

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,6 @@ FRONTEND_URL=http://localhost:4200
 # Alternative provider: SendGrid (preferred for deliverability)
 # MAIL_PROVIDER=sendgrid
 # SENDGRID_API_KEY=SG.xxxxx
+
+# este token me lo genero la app 738c320cee63cafc742dfd7cc09c6ec7
+
